# righteous_dub_generator

./: README.md  babylon.html  babylon.js  babylon_html.txt  babylon_js.txt  music-theory-deep.html
harmonia/: README.md  a.out  build.sh
harmonia/src/: audio_engine.cpp  audio_engine.h  main.cpp  theory_bridge.cpp  theory_bridge.h  tonnetz_widget.cpp  tonnetz_widget.h  voice.h
harmonia/theory/: server.py  server2.py
harmonia_nonedo_v1/src/: audio_engine.cpp  audio_engine.h  main.cpp  theory_bridge.cpp  theory_bridge.h  tonal_space_widget.cpp  tonal_space_widget.h  voice.h
harmonia_nonedo_v1/theory/: server.py
harmonia_v3/src/: audio_engine.h  main.cpp  theory_bridge.cpp  theory_bridge.h
harmonia_v3/theory/: server.py  server_pivot.py
harmonia_v4/: README.md
harmonia_v4/src/: audio_engine.cpp  audio_engine.h  main.cpp  theory_bridge.cpp  theory_bridge.h  tonnetz_widget.cpp  tonnetz_widget.h  voice.h
harmonia_v5/: CMakeLists.txt  README.md  build.sh
harmonia_v5/src/: audio_engine.cpp  main.cpp  psycho_graph_widget.cpp  psycho_graph_widget.h  theory_bridge.cpp  theory_bridge.h  tonal_space_widget.cpp  tonal_space_widget.h  tonnetz_widget.cpp  tonnetz_widget.h  voice.h
harmonia_v5/theory/: __init__.py  harmony.py  main.py  modulation.py  psychoacoustics.py  server.py  utils.py
harmonia_v5a/: build.sh
harmonia_v5a/src/: main.cpp  theory_bridge.cpp  tonal_space_widget.cpp  tonal_space_widget.h  voice.h
harmonia_v5a/theory/: server2.py  server3.py  server5.py
harmonia_v5b/: lattice_tuning.md
harmonia_v5b/src/: main.cpp  theory_bridge.cpp  tonal_space_widget.cpp  voice.h
harmonia_v5b/theory/: server6.py
harmonia_v5c/: CMakeLists.txt  build.sh
harmonia_v5c/src/: instrument_window.cpp  instrument_window.h  main.cpp  theory_bridge.h  tonal_space_widget.cpp
